force-app/main/default/objects/copado__MultiCloudAutomation__mdt/copado__MultiCloudAutomation__mdt.object-meta.xml
<CustomObject>
    <label>MultiCloudAutomation</label>
    <pluralLabel>MultiCloudAutomations</pluralLabel>
</CustomObject>