force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>