force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__DeployAPIName__c.field-meta.xml
<CustomField>
    <fullName>copado__DeployAPIName__c</fullName>
    <label>DeployAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>