force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__Job_Template__c.field-meta.xml
<CustomField>
    <fullName>copado__Job_Template__c</fullName>
    <label>Job Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>