force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PackageCreateApiName__c.field-meta.xml
<CustomField>
    <fullName>copado__PackageCreateApiName__c</fullName>
    <label>PackageCreateApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>