force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PackageImportAPIName__c.field-meta.xml
<CustomField>
    <fullName>copado__PackageImportAPIName__c</fullName>
    <label>PackageImportAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>