force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PackageVersionCreateApiName__c.field-meta.xml
<CustomField>
    <fullName>copado__PackageVersionCreateApiName__c</fullName>
    <label>PackageVersionCreateApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>