force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PackageVersionPublishAPIName__c.field-meta.xml
<CustomField>
    <fullName>copado__PackageVersionPublishAPIName__c</fullName>
    <label>PackageVersionPublishAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>