force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__Platform_Configuration__c.field-meta.xml
<CustomField>
    <fullName>copado__Platform_Configuration__c</fullName>
    <label>Platform Configuration</label>
    <referenceTo>copado__ExtensionPackageConfiguration__mdt</referenceTo>
    <relationshipLabel>MultiCloudAutomations</relationshipLabel>
    <relationshipName>MultiCloudAutomations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>