force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PlatformName__c.field-meta.xml
<CustomField>
    <fullName>copado__PlatformName__c</fullName>
    <label>PlatformName</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>