force-app/main/default/objects/copado__MultiCloudAutomation__mdt/fields/copado__PromoteAPIName__c.field-meta.xml
<CustomField>
    <fullName>copado__PromoteAPIName__c</fullName>
    <label>PromoteAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>